Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116527

Regression; (QML) Locale enums no longer exist

    XMLWordPrintable

Details

    • All
    • f9dccd05d (dev), 6099a3e09 (6.6), 003750b8c (6.5)

    Description

      In QML I have a Label with:

       

      text: {
         var loc = Qt.locale("nl_NL");
         return "(" + loc.currencySymbol(Locale.CurrencySymbol) + ") "

          + loc.currencySymbol(Locale.CurrencyDisplayName);
      }

       

      This follows the docs on https://doc.qt.io/qt-6/qml-qtqml-locale.html#currencySymbol-method

       

      What I expected to see is:

      (€) Euro

      Instead what I see is:

      (EUR) EUR

      And I'm pretty sure that this worked in v.6.4

       

      Adding this debug info:

      console.log(Locale.CurrencyIsoCode);
      console.log(Locale.CurrencyDisplayName);
      console.log(Locale.CurrencySymbol);

       

      gives me "undefined" 3 times.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qtqmlteam Qt Qml Team User
            tomz Tom Zander
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes