QLocale: Add Q_ENUM registration for some enums

Fixes: QTBUG-116527
Change-Id: If04bd5f504b3a8a39a35b9ba7024cdc9eb2d154a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit f9dccd05d3ff4bb403b8ad66f641695c9a00ee1d)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>